workspace = { members = ["replex-common", "replex-deps"] }
[package]
name = "replex"
version = "1.0.12"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
bytes = "1.4.0"
dotenv = "0.15.0"
figment = { version = "0.10.10", features = ["env", "yaml"] }
futures = "0.3.28"
futures-util = "0.3.26"
http = "1.1"
http-body-util = "0.1.2"
hyper = { version = "1.1", features = ["full"] }
itertools = "0.10.5"
mime = "0.3.16"
mime_guess = "2.0.4"
moka = { version = "0.12.8", features = ["future"] }
multimap = "0.10.0"
nestify = "0.3.3"
once_cell = "1.18.0"
regex = "1.9.3"
replex-common = { path = "replex-common" }
replex-deps = { path = "replex-deps" }
reqwest = { version = "0.12", features = ["gzip", "json", "blocking"] }
reqwest-middleware = "0.3"
salvo = { version = "0.68.5", features = [
  "anyhow",
  "websocket",
  "proxy",
  "cors",
  "acme",
  "cache",
  "otel",
  "compression",
  "concurrency-limiter",
  "affix",
] }
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0"
serde_path_to_error = "0.1.14"
serde_urlencoded = "0.7.1"
serde_with = { version = "3.8.1", features = ["json"] }
strum = "0.24.1"
tokio = { version = "1.38.0", features = ["full", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.4.1"
xml-rs = "0.8.24"
yaserde = "0.12.0"
yaserde_derive = "0.12.0"

[dev-dependencies]

[profile.release]
debug = false
